objects/OF_CommercialElement__c.object
<CustomObject>
    <fields>
        <fullName>ID_Prod__c</fullName>
        <externalId>true</externalId>
        <label>ID Prod</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Alias__c</fullName>
        <label>OF_Alias</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_Attivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CatalogoCommerciale__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_Servizio__r.OF_CatalogoCommerciale__c, OF_Servizio__r.OF_CatalogoCommerciale__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalogo commerciale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Commercial_Element_Code__c</fullName>
        <label>Commercial Element Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <label>Data fine validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <label>Data inizio validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Commercial elements</relationshipLabel>
        <relationshipName>CommercialElements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Commercial element</label>
    <nameField>
        <label>Commercial element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OF_DataFineValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataFineValidita__c &lt; OF_Servizio__r.OF_DataInizioValidita__c, OF_DataFineValidita__c &gt; OF_Servizio__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di fine validità non è compresa tra le date di validità del Servizio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_DataInizioValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataInizioValidita__c &lt; OF_Servizio__r.OF_DataInizioValidita__c, OF_DataInizioValidita__c &gt; OF_Servizio__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di inizio validità non è compresa tra le date di validità del Servizio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_ValiditaDataCommercialElement</fullName>
        <active>true</active>
        <errorConditionFormula>OF_DataFineValidita__c &lt; OF_DataInizioValidita__c</errorConditionFormula>
        <errorMessage>La data di fine validità non può essere minore della data di inizio validità</errorMessage>
    </validationRules>
</CustomObject>